--- a/less/v2/apps.less
+++ b/less/v2/apps.less
@@ -963,12 +963,14 @@
     padding-block-start: 8px;
     padding-block-end: 14px;
     padding-inline: 14px;
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
     overflow-y: auto;
 
     > section:empty { display: none; }
+  }
+  .window-content, .window-content > .column-container {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
   }
 
   /* Tabs */
