[#4708] Redesign `SizeConfig` for V2 app and styles
Re-implements `SizeConfig` using `ApplicationV2` and the V2 system
styles.

--- a/less/v2/advancement.less
+++ b/less/v2/advancement.less
@@ -174,3 +174,15 @@
     .new-scale-value select { font-weight: bold; }
   }
 }
+
+/* ----------------------------------------- */
+/*  Size Advancement                         */
+/* ----------------------------------------- */
+
+.dnd5e2.advancement.size.sheet {
+  .trait-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 24px;
+  }
+}
