[#4334] Add bonus field to `CheckActvitiy` and `SaveActivity`
Added bonus formulas that are added to all check & save rolls
performed through these activities. These bonuses are based off
the roll data of the actor who owns the activity, not the actor
doing the roll.

Closes #4334

--- a/templates/activity/parts/check-details.hbs
+++ b/templates/activity/parts/check-details.hbs
@@ -2,6 +2,7 @@
     <legend>{{ localize "DND5E.CHECK.FIELDS.check.label" }}</legend>
     {{ formField fields.check.fields.associated value=source.check.associated options=associatedOptions }}
     {{ formField fields.check.fields.ability value=source.check.ability options=abilityOptions }}
+    {{ formField fields.check.fields.bonus value=source.check.bonus }}
     {{#with fields.check.fields.dc.fields as |fields|}}
     {{ formField fields.calculation value=../activity.check.dc.calculation options=../calculationOptions }}
     {{#if (not ../source.check.dc.calculation)}}
